--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   tuple: ^2.0.1
   rxdart: ^0.27.7
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
