--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  built_value: ^8.0.5
+  built_collection: ^5.0.0
   rxdart: ^0.27.7
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
