--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\HP\\AppData\\Local\\Android\\sdk
-flutter.sdk=D:\\Apps\\Sdk\\flutter
+sdk.dir=/Users/gedeonanani/Library/Android/sdk
+flutter.sdk=/Users/gedeonanani/development/flutter
