--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  built_value: ^8.0.5
-  built_collection: ^5.0.0
-  rxdart: ^0.27.7
-  bloc: ^8.1.2
-  flutter_bloc: ^8.1.3
+  built_value: ^8.11.1
+  built_collection: ^5.1.1
+  rxdart: ^0.28.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
+  mockito: ^5.5.0
+  build_runner: ^2.7.0
 
 flutter:
